src/test/deca/syntax/invalid/parser/equals2.deca
// Manque arguments

// Date: 20.01.2022

{
    int a = 2;
    boolean b = ( a =< 3);
}